--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1344,3 +1344,12 @@ img{
         grid-template-columns: repeat(2, 1fr);
     }
 }
+
+.transition-fade {
+    transition: 0.4s;
+    opacity: 1;
+  }
+  
+  html.is-animating .transition-fade {
+    opacity: 0;
+  }
